build.log
aarch64-linux-gnu-gcc -Wall -O2 -ffreestanding -mcpu=cortex-a72 -mgeneral-regs-only -nostdlib -fno-builtin -Ikernel -I. -Idrivers -Inet -Iwimp -c kernel/boot.c -o kernel/boot.o
aarch64-linux-gnu-gcc -Wall -O2 -ffreestanding -mcpu=cortex-a72 -mgeneral-regs-only -nostdlib -fno-builtin -Ikernel -I. -Idrivers -Inet -Iwimp -c kernel/kernel.c -o kernel/kernel.o
aarch64-linux-gnu-gcc -Wall -O2 -ffreestanding -mcpu=cortex-a72 -mgeneral-regs-only -nostdlib -fno-builtin -Ikernel -I. -Idrivers -Inet -Iwimp -c kernel/errno.c -o kernel/errno.o
aarch64-linux-gnu-gcc -Wall -O2 -ffreestanding -mcpu=cortex-a72 -mgeneral-regs-only -nostdlib -fno-builtin -Ikernel -I. -Idrivers -Inet -Iwimp -c kernel/sched.c -o kernel/sched.o
kernel/sched.c:63:13: warning: ‘dequeue_task’ defined but not used [-Wunused-function]
   63 | static void dequeue_task(cpu_sched_t *sched, task_t *task) {
      |             ^~~~~~~~~~~~
aarch64-linux-gnu-gcc -Wall -O2 -ffreestanding -mcpu=cortex-a72 -mgeneral-regs-only -nostdlib -fno-builtin -Ikernel -I. -Idrivers -Inet -Iwimp -c kernel/task.c -o kernel/task.o
aarch64-linux-gnu-gcc -Wall -O2 -ffreestanding -mcpu=cortex-a72 -mgeneral-regs-only -nostdlib -fno-builtin -Ikernel -I. -Idrivers -Inet -Iwimp -c kernel/signal.c -o kernel/signal.o
aarch64-linux-gnu-gcc -Wall -O2 -ffreestanding -mcpu=cortex-a72 -mgeneral-regs-only -nostdlib -fno-builtin -Ikernel -I. -Idrivers -Inet -Iwimp -c kernel/mmu.c -o kernel/mmu.o
kernel/mmu.c:28:9: warning: "PAGE_SIZE" redefined
   28 | #define PAGE_SIZE       (1ULL << PAGE_SHIFT)
      |         ^~~~~~~~~
In file included from kernel/mmu.c:8:
kernel/kernel.h:22:9: note: this is the location of the previous definition
   22 | #define PAGE_SIZE           4096
      |         ^~~~~~~~~
kernel/mmu.c:151:13: warning: ‘pt_free’ defined but not used [-Wunused-function]
  151 | static void pt_free(uint64_t *l0) {
      |             ^~~~~~~
aarch64-linux-gnu-gcc -Wall -O2 -ffreestanding -mcpu=cortex-a72 -mgeneral-regs-only -nostdlib -fno-builtin -Ikernel -I. -Idrivers -Inet -Iwimp -c kernel/pipe.c -o kernel/pipe.o
aarch64-linux-gnu-gcc -Wall -O2 -ffreestanding -mcpu=cortex-a72 -mgeneral-regs-only -nostdlib -fno-builtin -Ikernel -I. -Idrivers -Inet -Iwimp -c kernel/select.c -o kernel/select.o
aarch64-linux-gnu-gcc -Wall -O2 -ffreestanding -mcpu=cortex-a72 -mgeneral-regs-only -nostdlib -fno-builtin -Ikernel -I. -Idrivers -Inet -Iwimp -c kernel/irq.c -o kernel/irq.o
kernel/irq.c: In function ‘gic_dist_init’:
kernel/irq.c:56:18: error: implicit declaration of function ‘ioremap’ [-Wimplicit-function-declaration]
   56 |     void *dist = ioremap(GIC_DIST_BASE, PAGE_SIZE);
      |                  ^~~~~~~
kernel/irq.c:56:18: error: initialization of ‘void *’ from ‘int’ makes pointer from integer without a cast [-Wint-conversion]
kernel/irq.c:59:5: error: implicit declaration of function ‘writel’ [-Wimplicit-function-declaration]
   59 |     writel(0, dist + GICD_CTLR);
      |     ^~~~~~
kernel/irq.c: In function ‘gic_redist_init’:
kernel/irq.c:80:5: error: ‘sd_redist’ undeclared (first use in this function); did you mean ‘gic_redist’?
   80 |     sd_redist = ioremap(GIC_REDIST_BASE + cpu_id * 0x20000, 0x20000);
      |     ^~~~~~~~~
      |     gic_redist
kernel/irq.c:80:5: note: each undeclared identifier is reported only once for each function it appears in
kernel/irq.c:83:15: error: ‘redist’ undeclared (first use in this function); did you mean ‘gic_redist’?
   83 |     writel(0, redist + GICR_WAKER);
      |               ^~~~~~
      |               gic_redist
kernel/irq.c:84:12: error: implicit declaration of function ‘readl’ [-Wimplicit-function-declaration]
   84 |     while (readl(redist + GICR_WAKER) & 4);
      |            ^~~~~
kernel/irq.c: In function ‘irq_unmask’:
kernel/irq.c:143:22: error: initialization of ‘void *’ from ‘int’ makes pointer from integer without a cast [-Wint-conversion]
  143 |         void *dist = ioremap(GIC_DIST_BASE, PAGE_SIZE);
      |                      ^~~~~~~
kernel/irq.c: In function ‘irq_eoi’:
kernel/irq.c:154:33: error: ‘GICR_EOIR0’ undeclared (first use in this function)
  154 |         writel(vector, redist + GICR_EOIR0);
      |                                 ^~~~~~~~~~
kernel/irq.c:157:22: error: initialization of ‘void *’ from ‘int’ makes pointer from integer without a cast [-Wint-conversion]
  157 |         void *dist = ioremap(GIC_DIST_BASE, PAGE_SIZE);
      |                      ^~~~~~~
kernel/irq.c:158:31: error: implicit declaration of function ‘GICD_EOIR’; did you mean ‘GICD_CTLR’? [-Wimplicit-function-declaration]
  158 |         writel(vector, dist + GICD_EOIR(vector / 32));
      |                               ^~~~~~~~~
      |                               GICD_CTLR
kernel/irq.c: In function ‘irq_handler’:
kernel/irq.c:166:35: error: ‘GICR_IAR0’ undeclared (first use in this function); did you mean ‘GICR_ICFGR0’?
  166 |     uint32_t iar = readl(redist + GICR_IAR0);
      |                                   ^~~~~~~~~
      |                                   GICR_ICFGR0
kernel/irq.c:177:26: error: ‘GICR_EOIR0’ undeclared (first use in this function)
  177 |     writel(iar, redist + GICR_EOIR0);
      |                          ^~~~~~~~~~
kernel/irq.c: In function ‘ipi_handler’:
kernel/irq.c:202:81: error: ‘PAGE_SHIFT’ undeclared (first use in this function); did you mean ‘PAGE_SIZE’?
  202 |                 __asm__ volatile ("tlbi vae1, %0\n dsb ish\n isb" :: "r"(arg >> PAGE_SHIFT));
      |                                                                                 ^~~~~~~~~~
      |                                                                                 PAGE_SIZE
kernel/irq.c:216:44: error: ‘GICR_EOIR0’ undeclared (first use in this function)
  216 |     writel(iar, gic_redist[get_cpu_id()] + GICR_EOIR0);
      |                                            ^~~~~~~~~~
make: *** [Makefile:64: kernel/irq.o] Error 1
